Fixed an error with responsive view on mobile on the slides

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -163,22 +163,18 @@ li a:hover {
 .slider{
 	overflow: hidden;
 	height:auto;
-	width:100%;
 	
-}
-.slider figure div{
+}.slider figure div{
 		width: 20%;
 		float:left;
-		width:100%;
 
-}
-.slider figure img{
+}.slider figure img{
 		width: 100%;
 		float:left;
 }
 .slider figure{
 	position: relative;
-	width: 100%;
+	width: 500%;
 	margin: 0;
 	left: 0;
 	animation: 25s slider infinite;
